--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+/* Base */
+/* .... */
+* {
+  padding: 0;
+  margin: 0;
+}
 
+body {
+  max-width: 1400px;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  font-family: "Shrikhand", cursive;
+}
 
 /*# sourceMappingURL=style.css.map */
