--- a/css/style.css
+++ b/css/style.css
@@ -11,30 +11,67 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-h1 {
+h1, h2, h3 {
   padding: 0;
   margin: 0;
+}
+
+h1 {
   font-family: "Shrikhand", cursive;
   font-size: 80px;
 }
 
+h2 {
+  font-size: 70px;
+}
+
 /* Layout header */
 header {
-  padding-top: 50px;
-  padding-bottom: 30px;
+  padding: 50px 0 30px 0;
   text-align: center;
   background-color: #FFFFFF;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.3));
 }
 
-/* Component */
+/* Factored */
+.text-align-center {
+  text-align: center;
+}
+
+/* Component call to action button */
+.comp-call-to-action-btn {
+  margin-top: 80px;
+  padding: 40px 60px 40px 60px;
+  background: linear-gradient(to top left, #9356DC, #FF79DA);
+  border: none;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.2));
+  border-radius: 2em;
+  color: #FFFFFF;
+  font-size: 45px;
+}
+
+/* HOME PAGE */
 .location {
   padding: 50px 0 50px 0;
   background-color: #EAEAEA;
   color: #353535;
-  text-align: center;
   font-size: 45px;
   font-weight: bold;
+}
+
+.call-to-action {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 100px 55px 160px 55px;
+  background-color: #F7F7F7;
+}
+.call-to-action__h2 {
+  max-width: 700px;
+}
+.call-to-action__paragraph {
+  margin-top: 35px;
+  font-size: 50px;
 }
 
 /*# sourceMappingURL=style.css.map */
