Create component order.

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ h2 {
   font-size: 25px;
 }
 
+h3 {
+  font-size: 16px;
+}
+
 /* Layout header */
 header {
   padding: 20px 0 10px 0;
@@ -40,6 +44,14 @@ header {
   text-align: center;
 }
 
+.padding-top {
+  padding-top: 40px;
+}
+
+.padding-bottom {
+  padding-bottom: 60px;
+}
+
 /* Component call to action button */
 .comp-call-to-action-btn {
   margin-top: 35px;
@@ -50,6 +62,22 @@ header {
   border-radius: 2em;
   color: #FFFFFF;
   font-size: 18px;
+}
+
+/* Component order */
+.comp-order {
+  display: flex;
+  margin-top: 20px;
+  padding: 30px 20px 25px 30px;
+  min-width: 250px;
+  border-radius: 15px;
+  background-color: #F7F7F7;
+  filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.15));
+  font-weight: normal;
+}
+.comp-order__icon {
+  margin-right: 30px;
+  color: #7E7E7E;
 }
 
 /* HOME PAGE */
@@ -65,7 +93,6 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 40px 0 60px 0;
   background-color: #F7F7F7;
 }
 .call-to-action__h2 {
@@ -78,9 +105,15 @@ header {
 }
 
 .functioning {
-  padding: 100px 55px 160px 55px;
+  padding-left: 20px;
+  padding-right: 20px;
   height: 300px;
   background-color: #FFFFFF;
+}
+
+.container-order {
+  display: flex;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=style.css.map */
