--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-family: "Shrikhand", cursive;
   font-size: 30px;
   font-weight: normal;
 }
@@ -35,6 +34,10 @@ img {
   width: 100%;
 }
 
+ul {
+  list-style-type: none;
+}
+
 /* Layout header */
 header {
   padding: 20px 0 10px 0;
@@ -43,11 +46,30 @@ header {
   filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.1));
 }
 
-/* Factored */
-.text-align-center {
-  text-align: center;
+/* Layout footer */
+footer {
+  background-color: #353535;
+  color: #FFFFFF;
+}
+footer .footer-container {
+  padding: 23px 20px 25px 20px;
+  display: flex;
+  flex-direction: column;
+}
+footer .footer-container__title {
+  margin-bottom: 15px;
+  font-size: 16px;
+}
+footer .footer-container__li {
+  font-size: 15px;
+}
+footer .footer-container__li__icon {
+  margin-right: 10px;
+  width: 15px;
+  font-size: 12px;
 }
 
+/* Factored */
 .padding-top {
   padding-top: 45px;
 }
@@ -70,6 +92,18 @@ header {
 
 .margin-bottom-title {
   margin-bottom: 25px;
+}
+
+.margin-bottom-footer {
+  margin-bottom: 8px;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+.font-family-shrikhand {
+  font-family: "Shrikhand", cursive;
 }
 
 /* Component call to action button */
