--- a/css/style.css
+++ b/css/style.css
@@ -208,8 +208,8 @@ footer .footer-container__li__icon {
 
 .call-to-action {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   background-color: #F7F7F7;
 }
 .call-to-action__h2 {
