--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,22 @@ ul {
 
 /* Layout header */
 header {
-  padding: 20px 0 10px 0;
-  text-align: center;
+  position: relative;
+  padding: 9px 0 9px 0;
   background-color: #FFFFFF;
   filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.1));
+}
+header .header-h1 {
+  padding-top: 10px;
+}
+header .header-icon {
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  padding-top: 7px;
+  margin-left: 20px;
+  font-size: 21px;
 }
 
 /* Layout footer */
@@ -108,6 +120,10 @@ footer .footer-container__li__icon {
 
 .font-weight-bold {
   font-weight: bold;
+}
+
+.display-none {
+  display: none;
 }
 
 /* Component call to action button */
