--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,10 @@ footer .footer-container__li__icon {
   margin-bottom: 8px;
 }
 
+.margin-bottom-comp-restaurants-cards {
+  margin-bottom: 20px;
+}
+
 .text-align-center {
   text-align: center;
 }
@@ -192,6 +196,9 @@ footer .footer-container__li__icon {
   background-color: #99E2D0;
   color: #008766;
 }
+.comp-restaurants-card__image-container__image {
+  object-fit: cover;
+}
 .comp-restaurants-card__description {
   display: flex;
   padding: 17px 25px 15px 10px;
@@ -252,7 +259,8 @@ footer .footer-container__li__icon {
 
 .container-restaurants-card {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
