--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,8 @@ footer .footer-container__li__icon {
 }
 .container__menu {
   z-index: 1;
+  display: flex;
+  flex-direction: column;
   position: relative;
   top: 200px;
   padding: 30px 15px 50px 15px;
@@ -131,19 +133,19 @@ footer .footer-container__li__icon {
 .container__menu__ul {
   margin-top: 12px;
 }
-.container__menu__ul__starter-dish {
+.container__menu__ul__li {
   padding: 12px 10px 12px 10px;
   background-color: #FFFFFF;
   border-radius: 13px;
   filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.15));
   font-size: 14px;
 }
-.container__menu__ul__starter-dish__details {
+.container__menu__ul__li__details {
   display: flex;
   justify-content: space-between;
   margin-top: 5px;
 }
-.container__menu__ul__starter-dish__details__price {
+.container__menu__ul__li__details__price {
   margin-right: 12px;
   font-size: 15px;
 }
@@ -338,6 +340,16 @@ footer .footer-container__li__icon {
 .footer-page-menu-francaise {
   position: relative;
   top: 200px;
+}
+
+.comp-container-page {
+  display: flex;
+  justify-content: center;
+}
+
+.call-to-action-btn-modif-page {
+  padding: 15px 45px 15px 45px;
+  font-size: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
