--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,9 @@ footer .footer-container__li__icon {
   margin-bottom: 5px;
 }
 .comp-restaurants-card__description__icon {
+  display: flex;
+  justify-content: center;
+  position: relative;
   margin-top: 5px;
   width: 10%;
   font-size: 22px;
