Modificaton css heart icon index.html.

--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,8 @@ footer .footer-container__li__icon {
   justify-content: center;
   position: relative;
   margin-top: 5px;
-  width: 10%;
+  width: 7.5%;
+  height: 20.5px;
   font-size: 22px;
 }
 
