--- a/sass/Components/_components.scss
+++ b/sass/Components/_components.scss
@@ -91,7 +91,8 @@
             justify-content: center;
             position: relative;
             margin-top: 5px;
-            width: 10%;
+            width: 7.5%;
+            height: 20.5px;
             font-size: 22px;
         }
     }
