Modify balise a css.

--- a/sass/Layout/_layout.scss
+++ b/sass/Layout/_layout.scss
@@ -43,6 +43,10 @@ footer {
                 width: 15px;
                 font-size: 12px;
             }
+
+            &__a {
+                color: $quatertiary;
+            }
         }
     }
 }
