--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,11 @@ ul {
   list-style-type: none;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 @keyframes menu {
   100% {
     opacity: 1;
@@ -116,6 +121,9 @@ footer .footer-container__li__icon {
   margin-right: 10px;
   width: 15px;
   font-size: 12px;
+}
+footer .footer-container__li__a {
+  color: #FFFFFF;
 }
 
 /* Layout menu */
