--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,10 @@ footer .footer-container__li__a {
   border-radius: 2em;
   color: #FFFFFF;
   font-size: 18px;
+  transition: filter 350ms;
+}
+.comp-call-to-action-btn:hover {
+  filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.3)) brightness(1.1);
 }
 
 /* Component order */
