--- a/sass/Components/_components.scss
+++ b/sass/Components/_components.scss
@@ -2,12 +2,17 @@
 .comp-call-to-action-btn {
     margin-top: 35px;
     padding: 20px 30px 20px 30px;
-    background: linear-gradient(to top left, $primary, $secondary);
+    @include backgroundLinearGradient(to top left, $primary, $secondary);
     border: none;
     filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.2));
     border-radius: 2em;
     color: $quatertiary;
     font-size: 18px;
+    transition: filter 350ms;
+    
+    &:hover {
+        filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.3)) brightness(1.1);
+    }    
 }
 
 /* Component order */
