--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,10 @@ footer .footer-container__li__a {
   background-color: #F7F7F7;
   filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.15));
   font-weight: normal;
+  transition: background-color 400ms ease;
+}
+.comp-order:hover {
+  background-color: rgb(245, 237, 255);
 }
 .comp-order__number {
   position: absolute;
