--- a/sass/Components/_components.scss
+++ b/sass/Components/_components.scss
@@ -26,6 +26,11 @@
     background-color: $dark-background-color;
     filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.15));
     font-weight: normal;
+    transition: background-color 400ms ease;
+
+    &:hover {
+        background-color: rgb(245,237,255);
+    }
 
     &__number {
         position: absolute;
