--- a/sass/Pages/_pages.scss
+++ b/sass/Pages/_pages.scss
@@ -38,6 +38,9 @@
 }
 
 .restaurant {
+    // Fact padding right and left affected to this element
+    padding-top: 50px;
+    padding-bottom: 45px;
     background-color: $dark-background-color;
 }
 
