Add css in functioning _page (index.html).

--- a/css/style.css
+++ b/css/style.css
@@ -467,6 +467,11 @@ footer .footer-container__li__a {
 .functioning {
   background-color: #FFFFFF;
 }
+@media screen and (min-width: 768px) {
+  .functioning__title {
+    text-align: center;
+  }
+}
 
 .container-order {
   display: flex;
