--- a/sass/Pages/_pages.scss
+++ b/sass/Pages/_pages.scss
@@ -29,6 +29,12 @@
 
 .functioning {
     background-color: $quatertiary;
+
+    &__title {
+        @media screen and (min-width: 768px) {
+            text-align: center;
+        }
+    }
 }
 
 .container-order {
