--- a/sass/Pages/_pages.scss
+++ b/sass/Pages/_pages.scss
@@ -48,6 +48,12 @@
     padding-top: 50px;
     padding-bottom: 45px;
     background-color: $dark-background-color;
+
+    &__title {
+        @media screen and (min-width: 768px) {
+            text-align: center;
+        }
+    }
 }
 
 .container-restaurants-card {
