Responsive tablet comp-restaurants-cards.

--- a/sass/Components/_components.scss
+++ b/sass/Components/_components.scss
@@ -61,6 +61,12 @@
     overflow: hidden;
     filter: drop-shadow(0px 3px 8px rgb(0, 0, 0, 0.15));
 
+    @media screen and (min-width: 768px) {
+        /* Fact margin top and bottom affected to this element */
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
     &__image-container {
         display: flex;
         position: relative;
