--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,13 @@ footer .footer-container__li__a {
   overflow: hidden;
   filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.15));
 }
+@media screen and (min-width: 768px) {
+  .comp-restaurants-card {
+    /* Fact margin top and bottom affected to this element */
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+}
 .comp-restaurants-card__image-container {
   display: flex;
   position: relative;
@@ -480,6 +487,7 @@ footer .footer-container__li__a {
 }
 
 .restaurant {
+  /* Fact padding right and left affected to this element */
   padding-top: 50px;
   padding-bottom: 45px;
   background-color: #F7F7F7;
@@ -494,6 +502,13 @@ footer .footer-container__li__a {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .container-restaurants-card {
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 
 /* MENU À LA FRANCAISE */
