--- a/sass/Pages/_pages.scss
+++ b/sass/Pages/_pages.scss
@@ -44,7 +44,7 @@
 }
 
 .restaurant {
-    // Fact padding right and left affected to this element
+    /* Fact padding right and left affected to this element */
     padding-top: 50px;
     padding-bottom: 45px;
     background-color: $dark-background-color;
@@ -60,6 +60,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 }
 
 /* MENU À LA FRANCAISE */
@@ -67,7 +73,6 @@
     position: relative;
     top: 200px;
 }
-
 
 .comp-container-page {
     display: flex;
