--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ footer .footer-container__li__a {
     margin: auto;
     margin-bottom: 110px;
     border-radius: 2.3em;
+    filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.1));
   }
 }
 .container__menu__title {
