--- a/sass/Layout/_layout.scss
+++ b/sass/Layout/_layout.scss
@@ -79,6 +79,7 @@ footer {
             margin: auto;
             margin-bottom: 110px;
             border-radius: 2.3em;
+            filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.1));
         }
 
         &__title {
