--- a/sass/Pages/_pages.scss
+++ b/sass/Pages/_pages.scss
@@ -25,6 +25,11 @@
         margin-top: 15px;
         font-size: 18px;
     }
+
+    &__a {
+        margin-top: 35px;
+        border-radius: 2em;
+    }
 }
 
 .functioning {
