--- a/css/style.css
+++ b/css/style.css
@@ -345,13 +345,17 @@ footer .footer-container__li__a {
   font-weight: bold;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .display-none {
   display: none;
 }
 
 /* Component call to action button */
 .comp-call-to-action-btn {
-  margin-top: 35px;
+  display: flex;
   padding: 20px 30px 20px 30px;
   background: linear-gradient(to top left, #9356DC, #FF79DA);
   border: none;
@@ -479,6 +483,10 @@ footer .footer-container__li__a {
 .call-to-action__paragraph {
   margin-top: 15px;
   font-size: 18px;
+}
+.call-to-action__a {
+  margin-top: 35px;
+  border-radius: 2em;
 }
 
 .functioning {
