--- a/sass/Components/_components.scss
+++ b/sass/Components/_components.scss
@@ -61,6 +61,12 @@
     overflow: hidden;
     filter: drop-shadow(0px 3px 8px rgb(0, 0, 0, 0.15));
 
+    &:hover .comp-restaurants-card__description {
+        // background-color: $primary;
+        background-color: $tertiary;
+        color: $quatertiary;
+    }
+
     @media screen and (min-width: 768px) {
         /* Fact margin top and bottom affected to this element */
         margin-right: 10px;
@@ -92,6 +98,7 @@
         display: flex;
         padding: 17px 25px 15px 10px;
         background-color: $quatertiary;
+        transition: color 400ms, background-color 400ms;
 
         &__container {
             width: 90%;
