--- a/css/style.css
+++ b/css/style.css
@@ -380,10 +380,14 @@ footer .footer-container__li__a {
   background-color: #F7F7F7;
   filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.15));
   font-weight: normal;
-  transition: background-color 400ms ease;
+  transition: background-color 400ms ease, color 400ms ease;
 }
 .comp-order:hover {
   background-color: rgb(245, 237, 255);
+  color: #9356DC;
+}
+.comp-order:hover .comp-order__icon {
+  color: #9356DC;
 }
 .comp-order__number {
   position: absolute;
@@ -401,6 +405,7 @@ footer .footer-container__li__a {
   margin-right: 30px;
   color: #7E7E7E;
   font-size: 22px;
+  transition: color 400ms ease;
 }
 
 /* Component restaurants card */
