--- a/css/style.css
+++ b/css/style.css
@@ -359,17 +359,21 @@ footer .footer-container__li__icon {
 
 /* Component call to action button */
 .comp-call-to-action-btn {
+  margin-top: 35px;
+  border: none;
+  background: none;
+}
+.comp-call-to-action-btn__a {
   display: flex;
   padding: 20px 30px 20px 30px;
   background: linear-gradient(to top left, #9356DC, #FF79DA);
-  border: none;
   filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.2));
   border-radius: 2em;
   color: #FFFFFF;
   font-size: 18px;
   transition: filter 350ms;
 }
-.comp-call-to-action-btn:hover {
+.comp-call-to-action-btn__a:hover {
   filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.3)) brightness(1.1);
 }
 
