--- a/css/style.css
+++ b/css/style.css
@@ -543,6 +543,8 @@ header .header-icon {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    margin: auto;
+    max-width: 1000px;
   }
 }
 
