--- a/sass/Pages/_pages.scss
+++ b/sass/Pages/_pages.scss
@@ -70,6 +70,8 @@
         flex-direction: row;
         justify-content: center;
         flex-wrap: wrap;
+        margin: auto;
+        max-width: 1000px;
     }
 }
 
