--- a/sass/Layout/_layout.scss
+++ b/sass/Layout/_layout.scss
@@ -6,6 +6,8 @@ header {
     filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.1));
 
     .header-h1 {
+        // display: inline-block;
+        // position: relative;
         padding-top: 10px;
     }
 
