--- a/sass/Layout/_layout.scss
+++ b/sass/Layout/_layout.scss
@@ -6,8 +6,6 @@ header {
     filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.1));
 
     .header-h1 {
-        // display: inline-block;
-        // position: relative;
         padding-top: 10px;
     }
 
@@ -149,6 +147,10 @@ header {
                 opacity: 0;
                 animation: menu 1.5s 200ms both;
                 overflow: hidden;
+
+                &:hover {
+                    color: $compRestaurantCardTags;
+                }
 
                 &:hover .container__menu__ul__li__price {
                     width: 110px;
