--- a/css/style.css
+++ b/css/style.css
@@ -421,6 +421,7 @@ header .header-icon {
 /* Component restaurants card */
 .comp-restaurants-card {
   display: flex;
+  position: relative;
   flex-direction: column;
   width: 330px;
   border-radius: 20px;
@@ -469,10 +470,13 @@ header .header-icon {
   font-size: 18px;
   margin-bottom: 5px;
 }
-.comp-restaurants-card__description__icon {
+.comp-restaurants-card__icon {
+  z-index: 8;
   display: flex;
   justify-content: center;
-  position: relative;
+  position: absolute;
+  bottom: 40px;
+  right: 25px;
   margin-top: 5px;
   width: 7.5%;
   height: 20.5px;
