Fixed issue, spiner.

--- a/css/style.css
+++ b/css/style.css
@@ -219,9 +219,6 @@ header .header-icon {
   animation: menu 1.5s 200ms both;
   overflow: hidden;
 }
-.container__menu__ul__li:hover {
-  color: #99E2D0;
-}
 .container__menu__ul__li:hover .container__menu__ul__li__price {
   width: 110px;
 }
@@ -283,7 +280,7 @@ header .header-icon {
 .spiner-loding {
   z-index: 1;
   visibility: collapse;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
